tests/ParseError/InvalidListTypeErrorTest.php
<?php

namespace Endermanbugzjfc\ConfigStruct\ParseError;

use PHPUnit\Framework\TestCase;

class InvalidListTypeErrorTest extends TestCase
{

    public function testGetMessage()
    {

    }
}
